<resources>
    <string name="app_name">FlashLight AI</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="flash">Flash</string>
    <string name="screen">Screen</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="sos">SOS</string>
    <string name="normal">Normal</string>
    <string name="strobe">Strobe</string>
    <string name="blink">Blink</string>
    <string name="disco">Disco</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="screen_light">Screen Light</string>
    <string name="map">Map</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="share">Share</string>
    <string name="battery_level">Battery Level</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="version">Version</string>
    <string name="incoming_call">Incoming call from:</string>
    <string name="incoming_sms">You have a new SMS from:</string>
    <string name="camera_permission_denied">Camera permission is required to use the flashlight</string>
    <string name="alert_battery_level">Your battery level is %d%%. Using flashlight will drain your battery faster.</string>
    <string name="alert_device_heat">Your device might get hot if you use this app for a long time.</string>
    <string name="warning_title">Warning!</string>
    <string name="warning_message">This function uses screen brightness at maximum level. Extended use may cause eye strain and drain battery faster.</string>
    <string name="solid_mode">Solid</string>
    <string name="colorful_mode">Colorful</string>
    <string name="pulse_mode">Pulse</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="theme">Theme</string>
    <string name="morse">Morse</string>
    <string name="morse_code">Morse Code</string>
    <string name="send">Send</string>
    <string name="morse_code_input_hint">Type message here...</string>
    <string name="toggle_morse">Morse</string>
    <string name="sos_signal">SOS Signal</string>
    <string name="text_message">Text Message</string>
    <string name="compass">Compass</string>
    <string name="magnifier">Magnifier</string>
    <string name="ruler">Ruler</string>
    <string name="mirror">Mirror</string>
    <string name="calculator">Calculator</string>
    <string name="weather">Weather</string>
    <string name="text_light">Text Light</string>
    <string name="colorblind">Colorblind</string>
    <string name="qr_code">QR Code</string>
    <string name="sound_meter">Sound Meter</string>
    <string name="level">Level</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="uv_detector">UV Detector</string>
    <string name="metal_detector">Metal Detector</string>
    <string name="ghost_detector">Ghost Detector</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="sleep_sounds">Sleep Sounds</string>
    <string name="white_noise">White Noise</string>
    <string name="night_mode">Night Mode</string>
    <string name="strobe_warning">WARNING: Strobe lights can cause seizures in people with photosensitive epilepsy. Use with caution.</string>
    <string name="flashlight_not_available">Flashlight is not available on this device</string>
    <string name="speed">Speed</string>
    <string name="size">Size</string>
    <string name="text_color">Text Color</string>
    <string name="blink_mode">Blink Mode</string>
    <string name="scroll_direction">Scroll Direction</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="default_text">I LOVE YOU</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="left_to_right">Left to Right</string>
    <string name="right_to_left">Right to Left</string>
    <string name="top_to_bottom">Top to Bottom</string>
    <string name="bottom_to_top">Bottom to Top</string>
    <string name="back">Back</string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="app_selection">App Selection</string>
    <string name="flashing_speed">Flashing Speed</string>
    <string name="select">Select</string>
    <string name="glow_effect">Glow Effect</string>
    <string name="power_button">Power Button</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="sms">SMS</string>
    <string name="text_size">Text Size</string>
    <string name="ms">ms</string>
    <string name="enable">Enable</string>
    <string name="flashing_pattern">Flashing Pattern</string>
    <string name="call_notification">Call Notification</string>
    <string name="call_flash_notification">Flash notification for calls</string>
    <string name="sms_flash_notification">Flash notification for SMS</string>
    <string name="notification_permission_required">Notification permission required</string>
    <string name="phone_permission_required">Phone permission required</string>
    <string name="sms_permission_required">SMS permission required</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="ready">Ready</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_off">Flash Off</string>
    <string name="permission_denied">Permission denied. The flashlight will not work.</string>
    <string name="mode_set_to">Mode set to</string>
    <string name="flash_mode_hold_tip">Long press the power button to change flash mode</string>
    <string name="mode_normal_active">Normal mode active: %d ms</string>
    <string name="mode_sos_active">SOS signal mode active</string>
    <string name="mode_disco_active">Disco mode active: %1$d-%2$d ms</string>
    <string name="start_text">Start Text</string>
    <string name="stop_text">Stop Text</string>
    <string name="set_text_wallpaper">Set as Wallpaper</string>
    <string name="full_background">Full Background</string>
    <string name="text_light_input_hint">Enter text to display...</string>
    <string name="text_font">Font</string>
    <string name="font_normal">Normal</string>
    <string name="font_bold">Bold</string>
    <string name="font_italic">Italic</string>
    <string name="reverse">Reverse</string>
    <string name="no_scroll">No Scroll</string>
    <string name="text_scroll_direction">Direction</string>
    <string name="text_scroll_speed">Speed</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="exit_fullscreen">Exit Fullscreen</string>
    <string name="fullscreen_suggestion">Nhấn nút fullscreen để có trải nghiệm tốt hơn</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="text_size_small">Small</string>
    <string name="text_size_large">Large</string>
    <string name="nav_home">Home</string>
    <string name="nav_flash">Flash</string>
    <string name="nav_screen">Screen Light</string>
    <string name="nav_text">Text Light</string>
    <string name="nav_settings">Settings</string>
    <string name="rate_dialog_title">Rate App</string>
    <string name="rate_dialog_message">Please rate your experience with the app!</string>
    <string name="feedback_hint">Share your feedback...</string>
    <string name="feedback_prompt">Help us improve the app:</string>
    <string name="rate_dialog_info">4-5 star ratings will be sent to Play Store</string>
    <string name="rate_dialog_submit">Submit</string>
    <string name="rate_dialog_cancel">Cancel</string>
    <string name="rate_thanks_high">Thank you for your rating!</string>
    <string name="rate_thanks_low">Thank you for your feedback! We will improve the app.</string>
    <string name="rate_no_rating">Please rate the app</string>
    <string name="language_changed">Language changed successfully!</string>
    <string name="language_changed_restart">Language changed! Restarting application...</string>
    <string name="confirm">Confirm</string>
    <string name="select_language">Select Language</string>
    <string name="language_cancel">Language selection cancelled</string>
    <string name="continue_btn">Continue</string>
    <string name="select_your_language">Please select your preferred language</string>
    <string name="language_selected">Selected: %s</string>
    <string name="language_confirm_title">Confirm Language</string>
    <string name="language_confirm_message">Are you sure you want to change the language to %s?</string>
    <string name="language_confirm_yes">Yes, Change</string>
    <string name="language_confirm_no">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="share_via">Share via</string>
    <string name="share_message">Check out this amazing flashlight app!</string>
    <string name="notification">Notification</string>
    <string name="flashlight">Flashlight</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_language_selection">Select Language</string>
    <string name="app_intro">Smart Flashlight with many features</string>
    <string name="loading">Loading...</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="flash_modes">FLASH MODES</string>
    <string name="flash_settings">FLASH SETTINGS</string>
    <string name="normal_mode">Normal mode</string>
    <string name="sos_mode">SOS mode</string>
    <string name="disco_mode">Disco mode</string>
    <string name="sending_morse_code">Sending Morse code</string>
    <string name="please_enter_text">Please enter text</string>
    <string name="sending_sos_signal">Sending SOS signal</string>
    <string name="language_english">English</string>
    <string name="language_vietnamese">Tiếng Việt</string>
    <string name="language_chinese">中文</string>
    <string name="language_spanish">Español</string>
    <string name="language_portuguese">Português</string>
    <string name="language_russian">Русский</string>
    <string name="language_indonesia">Bahasa Indonesia</string>
    <string name="language_india">हिन्दी</string>
    <string name="language_arabic">العربية</string>
    <string name="language_bangladesh">বাংলা</string>
    <string name="language_ukrainian">Українська</string>
    <string name="input_text">Input Text</string>
    <string name="request_permissions">Request Permissions</string>
    <string name="request_permissions_desc">Grant message and call permissions to use flashlight notification features.</string>
    <string name="permissions">Permissions</string>
    <string name="camera_permission">Camera permission (flashlight)</string>
    <string name="phone_permission">Phone permission (calls)</string>
    <string name="sms_permission">SMS permission (messages)</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_description">The app needs these permissions to function</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="select_effect">Select Effect</string>
    <string name="call_notification_enabled">Call notification flash enabled</string>
</resources>