<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory 
        android:title="@string/language"
        android:icon="@drawable/ic_language">
        
        <Preference
            android:key="pref_language"
            android:title="@string/language"
            android:summary="@string/language_english" />
            
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/notification_settings"
        android:icon="@drawable/ic_notification">
        
        <SwitchPreference
            android:key="call_flash_enabled"
            android:title="@string/call_flash_notification"
            android:defaultValue="false"
            android:icon="@drawable/ic_phone" />
            
        <SwitchPreference
            android:key="sms_flash_enabled"
            android:title="@string/sms_flash_notification"
            android:defaultValue="false"
            android:icon="@drawable/ic_sms" />
            
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/about"
        android:icon="@drawable/ic_info">
        
        <Preference
            android:key="app_version"
            android:title="@string/version"
            android:summary="1.0.0" />
            
        <Preference
            android:key="rate_app"
            android:title="@string/rate_this_app"
            android:icon="@drawable/ic_star" />
            
        <Preference
            android:key="share_app"
            android:title="@string/share"
            android:icon="@drawable/ic_share" />
            
        <Preference
            android:key="privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_policy" />
            
        <Preference
            android:key="terms_of_use"
            android:title="@string/terms_of_use"
            android:icon="@drawable/ic_terms" />
            
    </PreferenceCategory>

</PreferenceScreen> 